fix button overlap in app show

--- a/frontend/projects/ui/src/app/pages/apps-routes/app-show/components/app-show-status/app-show-status.component.scss
+++ b/frontend/projects/ui/src/app/pages/apps-routes/app-show/components/app-show-status/app-show-status.component.scss
@@ -3,7 +3,7 @@
 }
 
 .action-button {
-  margin: 10px;
-  min-height: 36px;
-  min-width: 120px;
+  margin: 20px 20px 10px 0;
+  min-height: 42px;
+  min-width: 140px;
 }
