--- a/frontend/projects/ui/src/app/pages/notifications/notifications.page.scss
+++ b/frontend/projects/ui/src/app/pages/notifications/notifications.page.scss
@@ -5,5 +5,7 @@
 .view-message-tag {
   margin-bottom: 8px;
   font-size: 16px;
-  cursor: pointer;
+  a {
+    cursor: pointer;
+  }
 }
